--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>Registration-Form</title>
+  <title>Volunteer Form</title>
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
@@ -11,37 +11,66 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400,400i,600,600i,700,700i&display=swap" rel="stylesheet">
 </head>
 <body>
+<header>
+  <div>
+<h1>Apply to be a tree planter</h1>
+  <p>Trees are one of the world’s most precious renewable resources—we need your help to renew the ecosystem.</p>
+</div>
+</header>
 
-  Volunteer Sign-up
+<div>
+<form method="POST" action="https://formspree.io/noyn0006">
+  <feildset>
+  <h2>Personal details</h2>
+  <label for="name">Full name</label>
+  <input id-"name" name="name" required>
+  <p>Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
+</div>
 
-  Apply to be a tree planter
-  Trees are one of the world’s most precious renewable resources—we need your help to renew the ecosystem.
+<div>
+  <label for="nickname">What should we call you?</label>
+  <input id-"nickname" name="nickname" required>
+  <p>What all your friends call you, e.g. “Liz”.</p>
+</div>
 
-  Personal details
+<div>
+  <label for="birth">Date of birth</label>
+  <input type="date" id="birth" name="birth" required>
+  <p>What all your friends call you, e.g. “Liz”.</p>
+</div>
 
-  Full name
-  Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.
+<div>
+  <label for="size">T-shirt size</label>
+  <select id="size" name="size" required>
+<option value="">Select a t-shirt size</option>
+  <option>- Fitted: XS</option>
+  <option>- Fitted: S</option>
+  <option>- Fitted: M</option>
+  <option>- Fitted: L</option>
+  <option>- Fitted: XL</option>
+  <option>- Straight-cut: XS</option>
+  <option>- Straight-cut: S</option>
+  <option>- Straight-cut: M</option>
+  <option>- Straight-cut: L</option>
+  <option>- Straight-cut: XL</option>
+</select>
+</div>
 
-  What should we call you?
-  What all your friends call you, e.g. “Liz”.
+<div>
+  <label for="email">Email</label>
+  <input type="email" id="email" name="email" required>
+</div>
 
-  Date of birth
+<div>
+  <label for="phone">Phone number<em class="flag-optional">(optional)</em></label>
+  <input type="tel" id="phone" name="phone">
+</div>
+</div>
+</feildset>
 
-  T-shirt size
-  - Select a t-shirt size
-  - Fitted: XS
-  - Fitted: S
-  - Fitted: M
-  - Fitted: L
-  - Fitted: XL
-  - Straight-cut: XS
-  - Straight-cut: S
-  - Straight-cut: M
-  - Straight-cut: L
-  - Straight-cut: XL
-
-  Email
-  Phone number (optional)
+<div class="gutter-1-2">
+  <hr class="push-2">
+</div>
 
   Address
   Street address
@@ -63,7 +92,9 @@
   - Québec
   - Saskatchewan
   - Yukon
+</div>
 
+<div>
   What activities are you interested in helping with?
   - Digging holes
   - Getting dirty
@@ -85,7 +116,9 @@
   - Plant identification
   - Special event planning
   - Speaking to groups
+</div>
 
+</div>
   Do you have a valid driver’s license?
   - Yes
   - No
@@ -101,9 +134,10 @@
   Please let us know any comments or questions you may have.
 
   Apply
-
+</div>
+<footer>
   © Tree Hugger International Organization
-
+</footer>
 
 </body>
 </html>
