--- a/index.html
+++ b/index.html
@@ -72,40 +72,102 @@
   <hr class="push-2">
 </div>
 
-  Address
-  Street address
-  City
-  Postal code
-
-  Province
-  - Select a province
-  - Alberta
-  - British Columbia
-  - Manitoba
-  - New Brunswick
-  - Newfoundland & Labrador
-  - Northwest Territories
-  - Nova Scotia
-  - Nunavut
-  - Ontario
-  - Prince Edward Island
-  - Québec
-  - Saskatchewan
-  - Yukon
+  <div>
+    <div>
+  <label for="street">Street address</label>
+  <input id="street" name="street" required>
 </div>
 
 <div>
-  What activities are you interested in helping with?
-  - Digging holes
-  - Getting dirty
-  - Lifting heavy objects
-  - Driving people
-  - Transporting trees
-  - Taking photos
-  - Online publishing
-  - Managing people
+  <label for="street">City</label>
+<input id="city" name="city" required>
+</div>
 
-  Do you have any experience with the following?
+<div>
+  <label for="postalcode">Postal code</label>
+  <input id="postalcode" name="postalcode" required>
+</div>
+
+<div>
+  <label for="province">Province</lavel>
+  <select id="province" name="province" required>
+  <option value-"">- Select a province</option>
+  <option>- Alberta</option>
+  <option>- British Columbia</option>
+  <option>- Manitoba</option>
+  <option>- New Brunswick</option>
+  <option>- Newfoundland & Labrador</option>
+  <option>- Northwest Territories</option>
+  <option>- Nova Scotia</option>
+  <option>- Nunavut</option>
+  <option>- Ontario</option>
+  <option>- Prince Edward Island</option>
+  <option>- Québec</option>
+  <option>- Saskatchewan</option>
+  <option>- Yukon</option>
+</div>
+
+<div class="gutter-1-2">
+  <hr class="push-2">
+</div>
+
+<feildset>
+  <legend>  What activities are you interested in helping with?</legend>
+<div class="grid">
+  <div class>
+    <div class>
+      <input type="checkbox" id="holes">
+      <label for="holes">Digging holes</label>
+    </div>
+
+    <div class>
+      <input type="checkbox" id="dirty">
+      <label for="dirty">Getting dirty</label>
+    </div>
+
+  <div class>
+    <input type="checkbox" id="heavy">
+    <label for="heavy">Lifting heavy objects</label>
+  </div>
+
+  <div class>
+    <input type="checkbox" id="drive">
+    <label for="drive">Driving people</label>
+  </div>
+
+  <div class>
+    <input type="checkbox" id="trees">
+    <label for="trees">Transporting trees</label>
+  </div>
+
+  <div class>
+    <input type="checkbox" id="photos">
+    <label for="photos">Taking photos</label>
+  </div>
+
+  <div class>
+    <input type="checkbox" id="online">
+    <label for="online">Online publishing</label>
+  </div>
+
+  <div class>
+    <input type="checkbox" id="managing">
+    <label for="managing">Managing people</label>
+  </div>
+
+</div>
+</div>
+</feildset>
+
+<fieldset>
+<legend>Do you have any experience with the following?</leged>
+
+<div class="grid">
+<div>
+    <div class>
+      <input type="checkbox" id="managing">
+      <label for="managing">Managing people</label>
+    </div>
   - Shovels
   - Hand-held GPS
   - Writing & blogging
@@ -118,7 +180,6 @@
   - Speaking to groups
 </div>
 
-</div>
   Do you have a valid driver’s license?
   - Yes
   - No
