--- a/index.html
+++ b/index.html
@@ -163,22 +163,64 @@
 <legend>Do you have any experience with the following?</leged>
 
 <div class="grid">
+
 <div>
     <div class>
-      <input type="checkbox" id="managing">
-      <label for="managing">Managing people</label>
+      <input type="checkbox" id="shovels">
+      <label for="shovels">Shovels</label>
     </div>
-  - Shovels
-  - Hand-held GPS
-  - Writing & blogging
-  - Photography
-  - Trail & hill climbing
-  - Bush craft
-  - ATVs
-  - Plant identification
-  - Special event planning
-  - Speaking to groups
+
+    <div class>
+      <input type="checkbox" id="gps">
+      <label for="gps">Hand-held GPS</label>
+    </div>
+
+  <div class>
+    <input type="checkbox" id="blogging">
+    <label for="blogging">Writing & blogging</label>
+  </div>
+
+  <div class>
+    <input type="checkbox" id="photography">
+    <label for="photography">Photography</label>
+  </div>
+
+  <div class>
+    <input type="checkbox" id="climbing">
+    <label for="climbing">Trail & hill climbing</label>
+  </div>
+
 </div>
+
+<div>
+
+  <div class>
+    <input type="checkbox" id="craft">
+    <label for="craft">Bush craft</label>
+  </div>
+
+  <div class>
+    <input type="checkbox" id="atv">
+    <label for="atv">ATVs</label>
+  </div>
+
+  <div class>
+    <input type="checkbox" id="plant">
+    <label for="plant">Plant identification</label>
+  </div>
+
+  <div class>
+    <input type="checkbox" id="event">
+    <label for="event">Special event planning</label>
+  </div>
+
+  <div class>
+    <input type="checkbox" id="speaking">
+    <label for="speaking">Speaking to groups</label>
+  </div>
+</div>
+
+
 
   Do you have a valid driver’s license?
   - Yes
@@ -195,6 +237,8 @@
   Please let us know any comments or questions you may have.
 
   Apply
+
+
 </div>
 <footer>
   © Tree Hugger International Organization
