--- a/index.html
+++ b/index.html
@@ -11,35 +11,39 @@
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700,700i&display=swap" rel="stylesheet">
 </head>
 <body>
-<header>
-  <div>
-<h1>Apply to be a tree planter</h1>
-  <p>Trees are one of the world’s most precious renewable resources—we need your help to renew the ecosystem.</p>
+
+<header class="pad-t pad-b section-primary">
+  <div class="wrapper gutter-1-2">
+<h1 class="push-1-2">Apply to be a tree planter</h1>
+  <p class="no-auto-margins mega max-length push-1-2">Trees are one of the world’s most precious renewable resources—we need your help to renew the ecosystem.</p>
 </div>
 </header>
 
-<div>
-<form method="POST" action="https://formspree.io/noyn0006">
-  <feildset>
-  <h2>Personal details</h2>
+<div class="wrapper push-2">
+<form class="gutter-1-2" method="POST" action="https://formspree.io/noyn0006">
+
+
+  <fieldset class="pad-t-1-2">
+    <legend class="giga push pad-t-2">Personal details</legend>
+  <div class="grid">
+    <div class="push-1-2 unit xs-1 s-1 ,-1-2 l-1-2 space-right">
   <label for="name">Full name</label>
   <input id-"name" name="name" required>
-  <p>Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
+  <p class="italic micro push-0">Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
 </div>
 
-<div>
+<div class="push unit xs-1 s-1 m-1-2 l-1-2 space-left">
   <label for="nickname">What should we call you?</label>
   <input id-"nickname" name="nickname" required>
-  <p>What all your friends call you, e.g. “Liz”.</p>
+  <p class="italic micro push-0">What all your friends call you, e.g. “Liz”.</p>
 </div>
 
-<div>
+<div class="push unit xs-1 s-1 m-1-2 l-1-2 space-right">
   <label for="birth">Date of birth</label>
   <input type="date" id="birth" name="birth" required>
-  <p>What all your friends call you, e.g. “Liz”.</p>
 </div>
 
-<div>
+<div class="push unit xs-1 s-1 m-1-2 l-1-2 space-left">
   <label for="size">T-shirt size</label>
   <select id="size" name="size" required>
 <option value="">Select a t-shirt size</option>
@@ -56,101 +60,110 @@
 </select>
 </div>
 
-<div>
+<div class="push unit xs-1 s-1 m-1-2 l-1-2 space-right">
   <label for="email">Email</label>
   <input type="email" id="email" name="email" required>
 </div>
 
-<div>
-  <label for="phone">Phone number<em class="flag-optional">(optional)</em></label>
+<div class="push unit xs-1 s-1 m-1-2 l-1-2 space-left">
+  <label for="phone">Phone number <em class="flag-optional">(optional)</em></label>
   <input type="tel" id="phone" name="phone">
 </div>
 </div>
-</feildset>
+
+
+</fieldset>
 
 <div class="gutter-1-2">
   <hr class="push-2">
 </div>
 
-  <div>
-    <div>
+<fieldset class="pad-1-2 push-2">
+  <legend class="giga push-2">Address</legend>
+
+  <div class="grid">
+<div class="push-2 unit xs-1 s-1 m-1-2 l-1-2 space-right">
   <label for="street">Street address</label>
   <input id="street" name="street" required>
 </div>
 
-<div>
+<div class="push-2 unit xs-1 s-1 m-1-2 l-1-2 space-left">
   <label for="street">City</label>
 <input id="city" name="city" required>
 </div>
 
-<div>
-  <label for="postalcode">Postal code</label>
-  <input id="postalcode" name="postalcode" required>
-</div>
-
-<div>
+<div class="push-2 unit xs-1 s-1 m-1-2 l-1-2 space-right">
   <label for="province">Province</lavel>
   <select id="province" name="province" required>
-  <option value-"">- Select a province</option>
-  <option>- Alberta</option>
-  <option>- British Columbia</option>
-  <option>- Manitoba</option>
-  <option>- New Brunswick</option>
-  <option>- Newfoundland & Labrador</option>
-  <option>- Northwest Territories</option>
-  <option>- Nova Scotia</option>
-  <option>- Nunavut</option>
-  <option>- Ontario</option>
-  <option>- Prince Edward Island</option>
-  <option>- Québec</option>
-  <option>- Saskatchewan</option>
-  <option>- Yukon</option>
+  <option value="">- Select a province</option>
+  <option>Alberta</option>
+  <option>British Columbia</option>
+  <option>Manitoba</option>
+  <option>New Brunswick</option>
+  <option>Newfoundland & Labrador</option>
+  <option>Northwest Territories</option>
+  <option>Nova Scotia</option>
+  <option>Nunavut</option>
+  <option>Ontario</option>
+  <option>Prince Edward Island</option>
+  <option>Québec</option>
+  <option>Saskatchewan</option>
+  <option>Yukon</option>
+</select>
 </div>
+
+<div class="unit xs-1 s-1 m-1-2 l-1-2 space-left">
+<label for="postalcode">Postal code</label>
+<input id="postalcode" name="postalcode" required>
+</div>
+</div>
+
+</fieldset>
 
 <div class="gutter-1-2">
   <hr class="push-2">
 </div>
 
-<feildset>
-  <legend>  What activities are you interested in helping with?</legend>
+<fieldset class="pad-t-1-2 push-2">
+  <legend class="giga">What activities are you interested in helping with?</legend>
 <div class="grid">
-  <div class>
-    <div class>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2">
+      <div class="pad-t-1-8 pad-b-1-8>"
       <input type="checkbox" id="holes">
       <label for="holes">Digging holes</label>
     </div>
 
-    <div class>
+    <div class="pad-t-1-8 pad-b-1-8>"
       <input type="checkbox" id="dirty">
       <label for="dirty">Getting dirty</label>
     </div>
 
-  <div class>
+  <div class="pad-t-1-8 pad-b-1-8>"
     <input type="checkbox" id="heavy">
     <label for="heavy">Lifting heavy objects</label>
   </div>
 
-  <div class>
+  <div class="pad-t-1-8 pad-b-1-8>"
     <input type="checkbox" id="drive">
     <label for="drive">Driving people</label>
   </div>
 
-  <div class>
+  <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter-1-2">
     <input type="checkbox" id="trees">
     <label for="trees">Transporting trees</label>
   </div>
 
-  <div class>
+  <div class="pad-t-1-8 pad-b-1-8>"
     <input type="checkbox" id="photos">
     <label for="photos">Taking photos</label>
   </div>
 
-  <div class>
+  <div class="pad-t-1-8 pad-b-1-8>"
     <input type="checkbox" id="online">
     <label for="online">Online publishing</label>
   </div>
 
-  <div class>
+  <div class="pad-t-1-8 pad-b-1-8>"
     <input type="checkbox" id="managing">
     <label for="managing">Managing people</label>
   </div>
@@ -159,62 +172,63 @@
 </div>
 </feildset>
 
-<fieldset>
-<legend>Do you have any experience with the following?</leged>
+<fieldset class="pad-1-2 push-2">
+
+<legend class="giga">Do you have any experience with the following?</legend>
 
 <div class="grid">
 
 <div>
-    <div class>
+    <div class="unit xs-1 m-1-2 l-1-2 gutter-1-2">
+      <div class="pad-t-1-8 pad-b-1-8">
       <input type="checkbox" id="shovels">
       <label for="shovels">Shovels</label>
     </div>
 
-    <div class>
+    <div class="pad-t-1-8 pad-b-1-8">
       <input type="checkbox" id="gps">
       <label for="gps">Hand-held GPS</label>
     </div>
 
-  <div class>
+  <div class="pad-t-1-8 pad-b-1-8">
     <input type="checkbox" id="blogging">
     <label for="blogging">Writing & blogging</label>
   </div>
 
-  <div class>
+  <div class="pad-t-1-8 pad-b-1-8">
     <input type="checkbox" id="photography">
     <label for="photography">Photography</label>
   </div>
 
-  <div class>
+  <div class="pad-t-1-8 pad-b-1-8">
     <input type="checkbox" id="climbing">
     <label for="climbing">Trail & hill climbing</label>
   </div>
 
 </div>
 
-<div>
-
-  <div class>
+<div class="unit xs-1 m-1-2 l-1-2 gutter-1-2">
+  <div class="pad-t-1-8 pad-b-1-8">
     <input type="checkbox" id="craft">
     <label for="craft">Bush craft</label>
   </div>
 
-  <div class>
+<div class="pad-t-1-8 pad-b-1-8">
     <input type="checkbox" id="atv">
     <label for="atv">ATVs</label>
   </div>
 
-  <div class>
+<div class="pad-t-1-8 pad-b-1-8">
     <input type="checkbox" id="plant">
     <label for="plant">Plant identification</label>
   </div>
 
-  <div class>
+<div class="pad-t-1-8 pad-b-1-8">
     <input type="checkbox" id="event">
     <label for="event">Special event planning</label>
   </div>
 
-  <div class>
+<div class="pad-t-1-8 pad-b-1-8">
     <input type="checkbox" id="speaking">
     <label for="speaking">Speaking to groups</label>
   </div>
